[package]
name = "debug_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_spicy_networking = "0.5.1"
bevy = { version = "0.5.0", default-features = false }
serde = "1.0.130"
typetag = "0.1.7"